# blog-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: db6b0a213aed_01_initial_db.py
src/: main.py
src/api/v1/: base.py  post.py  user.py
src/core/: auth.py  config.py
src/db/: postgres.py
src/models/: __init__.py  post.py  user.py
src/repositories/: base.py  post.py  user.py
src/schemas/: post.py  user.py
src/services/: avg_posts_per_month_for_user.py
tests/: conftest.py  test_auth.py  test_auth_api.py  test_post_api.py  test_posts_statistics.py  test_user_api.py
