[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Alex Fofanov <alex.fofanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
orjson = "^3.10.10"
greenlet = "^3.1.1"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
